--- a/datepicker-app/package.json
+++ b/datepicker-app/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
+    "omnibar": "^2.0.2",
     "react": "^16.4.2",
+    "react-autosuggest": "^9.3.4",
     "react-day-picker": "^7.1.10",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
